Minor cleanup in TestRangerSystemAccessControl